--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
     <head>
-        <title>Simple Interest Calculator</title>
+        <title>Web App - Simple Interest Calculator</title>
         <script src="script.js"></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="maindiv">
             <h1>Simple Interest Calculator</h1>
-            Amount <input type="number"  id="principal"> <br><br>
-            Interest Rate <input onchange="updateRate()" type="range" id="rate" min="minval" max="maxval" value="default_val">
-            <span id="rate_val"> 10.25% </span> <br><br>
-            No. of Years <select id="years">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-            </select><br><br>
+            <div class="row">
+                <div class="column">
+                    <div>Amount</div>
+                    <div>Interest Rate</div>
+                    <div>No. of Years</div>
+                </div>
+                <div class="column">
+                    <div><input type="number" id="principal"></div>
+                    <div>
+                        <input onchange="updateRate()" type="range" id="rate" step=0.25 min=1 max=20 value=10.25>
+                        <span id="rate_val"> 10.25% </span><br>
+                    </div>
+                    <div>
+                        <select id="years">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
             <button onclick="compute()"> Compute Interest</button> <br><br>
             <span id="result">
                 
