--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="maindiv">
             <h1>Simple Interest Calculator</h1>
             <div class="row">
-                <div class="column">
+                <div class="column left">
                     <div>Amount</div>
                     <div>Interest Rate</div>
                     <div>No. of Years</div>
